@@ -19,20 +19,28 @@ repositories {
 }
 
 dependencies {
+    implementation("org.springframework.boot:spring-boot-starter-mail")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.3.5")
-    implementation("org.springframework.boot:spring-boot-starter-data-redis:3.3.5")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.4.0")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.18.0")
+    implementation("org.slf4j:slf4j-api")
     implementation(project(":shared-models"))
-
-//    developmentOnly("org.springframework.boot:spring-boot-docker-compose")
+    implementation(project(":shared-entities"))
     runtimeOnly("org.postgresql:postgresql")
 
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("com.ninja-squad:springmockk:3.1.1")
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude("org.junit.vintage:junit-vintage-engine")
+        exclude("org.mockito:mockito-core")
+    }
+    testImplementation(kotlin("test"))
 }
 
 kotlin {
@@ -43,4 +51,5 @@ kotlin {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
 }
